changed baseurl to memes.eason.fr.to

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://memes.eason.fr.to'
 languageCode = 'en-us'
 title = 'Memes Archive'
 theme = 'gokarna'
