--- a/hugo.toml
+++ b/hugo.toml
@@ -4,6 +4,25 @@ title = 'Memes Archive'
 theme = 'gokarna'
 enableRobotsTXT = true
 
+[menu]
+  [[menu.main]]
+    # Unique identifier for a menu item
+    identifier = "posts"
+
+    url = "/posts/"
+
+    # You can add extra information before the name (HTML format is supported), such as icons
+    pre = ""
+
+    # You can add extra information after the name (HTML format is supported), such as icons
+    post = ""
+
+    # Display name
+    name = "Posts"
+
+    # Weights are used to determine the ordering
+    weight = 1
+
 [params]
   showPostsOnHomePage = "recent"
   metaKeywords = ["memes", "programming", "coding"]
